[gd_scene load_steps=5 format=3 uid="uid://cj80aa4ckke2i"]

[ext_resource type="Script" path="res://addons/advanced-text/nodes/AdvancedTextButton.gd" id="1_soi2r"]
[ext_resource type="Resource" uid="uid://74bogqdd04tt" path="res://Test/Data/markdown_settings.tres" id="2_r4tu3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wapt7"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.0392157)
border_color = Color(1, 1, 1, 0.0509804)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubyga"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 6.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.0784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.117647)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ChoiceButton" type="RichTextLabel"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_wapt7")
theme_override_styles/normal = SubResource("StyleBoxFlat_ubyga")
bbcode_enabled = true
text = "text"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("1_soi2r")
_text = "text"
parser = ExtResource("2_r4tu3")

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
